# gaming-your-life

./: .gitignore  AGENTS.md  ARCHITECTURE.md  PRD_V1.md  PROJECT_BRIEF.md  README.md  TASKS.md  pyproject.toml
docs/codex/: 2026-02-25.md
src/fate_app/: __init__.py  app.py  launcher.py
src/fate_core/: __init__.py  crud.py  db.py  labels.py  rules.py
src/fate_gml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/gml/: cli.py  cli_xlsx_legacy.py  db.py  export_csv.py  export_xlsx.py
v0.1/: environment.yml  export_csv.py  fate.sh  gml_cli.py  gml_cli_v0.2.py  init_gml_xlsx.py
