[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fate-gml"
version = "0.1.0"
description = "A local-first, gamified personal growth tracker (CLI)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["openpyxl"]

[project.scripts]
fate = "fate_app.launcher:main"
fate-cli = "gml.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
